# neo-mumbai-noir

./: .env.example  .gitignore  Dockerfile  README.md  automated_pipeline.py  docker-compose.yml  download_selected_images.py  extract_characters.py  face_fusion_pipeline.py  facefusion_server.py  generate_prompts.py  image_search.py  img2img_generator_comfy.py  local_generation_comfy.py  pyproject.toml  requirements.txt  run_pipeline.sh  smart_image_search.py  start.sh  stop.sh  story.txt  test_db.py  unified_ui.py  verify_output.py  web_ui.py
.beads/: metadata.json
.claude/skills/: noir-check-logs.md  noir-extract-characters.md  noir-generate-images.md  noir-launch-ui.md  noir-run-pipeline.md  noir-search-images.md  noir-stop.md
db/: __init__.py  connection.py  models.py  utils.py
db/migrations/: migrate.py  v1_initial.sql
db/repositories/: __init__.py  character.py  face_swap.py  image.py  image_prompt.py  project.py  scene.py  search_query.py  story.py
docs/: PRD.md
neo_modules/: __init__.py  extraction.py
