[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo-modules"
version = "0.1.0"
description = "Neo Mumbai Noir extraction and search modules"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["neo_modules"]
